@@ -13,8 +13,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>327</width>
-            <height>342</height>
+            <width>225</width>
+            <height>395</height>
         </rect>
     </property>
     <property stdset="1">
@@ -54,8 +54,76 @@
                 </property>
                 <property stdset="1">
                     <name>spacing</name>
-                    <number>3</number>
+                    <number>6</number>
                 </property>
+                <widget row="1"  column="1" >
+                    <class>QLineEdit</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>fileED</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>enabled</name>
+                        <bool>true</bool>
+                    </property>
+                    <property>
+                        <name>toolTip</name>
+                        <string>Send output to a file</string>
+                    </property>
+                </widget>
+                <widget row="2"  column="1" >
+                    <class>QLayoutWidget</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>Layout5</cstring>
+                    </property>
+                    <hbox>
+                        <property stdset="1">
+                            <name>margin</name>
+                            <number>0</number>
+                        </property>
+                        <property stdset="1">
+                            <name>spacing</name>
+                            <number>6</number>
+                        </property>
+                        <widget>
+                            <class>QPushButton</class>
+                            <property stdset="1">
+                                <name>name</name>
+                                <cstring>browsePB</cstring>
+                            </property>
+                            <property stdset="1">
+                                <name>enabled</name>
+                                <bool>true</bool>
+                            </property>
+                            <property stdset="1">
+                                <name>text</name>
+                                <string>&amp;Browse ...</string>
+                            </property>
+                        </widget>
+                        <spacer>
+                            <property>
+                                <name>name</name>
+                                <cstring>Spacer15</cstring>
+                            </property>
+                            <property stdset="1">
+                                <name>orientation</name>
+                                <enum>Horizontal</enum>
+                            </property>
+                            <property stdset="1">
+                                <name>sizeType</name>
+                                <enum>Expanding</enum>
+                            </property>
+                            <property>
+                                <name>sizeHint</name>
+                                <size>
+                                    <width>20</width>
+                                    <height>20</height>
+                                </size>
+                            </property>
+                        </spacer>
+                    </hbox>
+                </widget>
                 <widget row="0"  column="0" >
                     <class>QRadioButton</class>
                     <property stdset="1">
@@ -75,6 +143,17 @@
                         <string>Send output to the printer</string>
                     </property>
                 </widget>
+                <widget row="0"  column="1" >
+                    <class>QLineEdit</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>printerED</cstring>
+                    </property>
+                    <property>
+                        <name>toolTip</name>
+                        <string>Send output to the given printer</string>
+                    </property>
+                </widget>
                 <widget row="1"  column="0" >
                     <class>QRadioButton</class>
                     <property stdset="1">
@@ -88,47 +167,6 @@
                     <property>
                         <name>toolTip</name>
                         <string>Send output to a file</string>
-                    </property>
-                </widget>
-                <widget row="0"  column="1" >
-                    <class>QLineEdit</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>printerED</cstring>
-                    </property>
-                    <property>
-                        <name>toolTip</name>
-                        <string>Send output to the given printer</string>
-                    </property>
-                </widget>
-                <widget row="1"  column="1" >
-                    <class>QLineEdit</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>fileED</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>enabled</name>
-                        <bool>true</bool>
-                    </property>
-                    <property>
-                        <name>toolTip</name>
-                        <string>Send output to a file</string>
-                    </property>
-                </widget>
-                <widget row="1"  column="2" >
-                    <class>QPushButton</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>browsePB</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>enabled</name>
-                        <bool>true</bool>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>&amp;Browse ...</string>
                     </property>
                 </widget>
             </grid>
@@ -146,7 +184,7 @@
             <property>
                 <name>layoutSpacing</name>
             </property>
-            <grid>
+            <vbox>
                 <property stdset="1">
                     <name>margin</name>
                     <number>11</number>
@@ -155,90 +193,154 @@
                     <name>spacing</name>
                     <number>6</number>
                 </property>
-                <widget row="0"  column="0" >
-                    <class>QRadioButton</class>
+                <widget>
+                    <class>QLayoutWidget</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>allRB</cstring>
+                        <cstring>Layout3</cstring>
+                    </property>
+                    <grid>
+                        <property stdset="1">
+                            <name>margin</name>
+                            <number>0</number>
+                        </property>
+                        <property stdset="1">
+                            <name>spacing</name>
+                            <number>6</number>
+                        </property>
+                        <widget row="1"  column="1" >
+                            <class>QLayoutWidget</class>
+                            <property stdset="1">
+                                <name>name</name>
+                                <cstring>Layout2</cstring>
+                            </property>
+                            <hbox>
+                                <property stdset="1">
+                                    <name>margin</name>
+                                    <number>0</number>
+                                </property>
+                                <property stdset="1">
+                                    <name>spacing</name>
+                                    <number>6</number>
+                                </property>
+                                <widget>
+                                    <class>QLineEdit</class>
+                                    <property stdset="1">
+                                        <name>name</name>
+                                        <cstring>fromED</cstring>
+                                    </property>
+                                    <property stdset="1">
+                                        <name>enabled</name>
+                                        <bool>false</bool>
+                                    </property>
+                                    <property>
+                                        <name>toolTip</name>
+                                        <string>Page number to print from</string>
+                                    </property>
+                                </widget>
+                                <widget>
+                                    <class>QLabel</class>
+                                    <property stdset="1">
+                                        <name>name</name>
+                                        <cstring>toLA</cstring>
+                                    </property>
+                                    <property stdset="1">
+                                        <name>text</name>
+                                        <string>&amp;to</string>
+                                    </property>
+                                    <property>
+                                        <name>buddy</name>
+                                        <cstring>toED</cstring>
+                                    </property>
+                                </widget>
+                                <widget>
+                                    <class>QLineEdit</class>
+                                    <property stdset="1">
+                                        <name>name</name>
+                                        <cstring>toED</cstring>
+                                    </property>
+                                    <property stdset="1">
+                                        <name>enabled</name>
+                                        <bool>false</bool>
+                                    </property>
+                                    <property>
+                                        <name>toolTip</name>
+                                        <string>Page number to print to</string>
+                                    </property>
+                                </widget>
+                            </hbox>
+                        </widget>
+                        <widget row="1"  column="0" >
+                            <class>QRadioButton</class>
+                            <property stdset="1">
+                                <name>name</name>
+                                <cstring>rangeRB</cstring>
+                            </property>
+                            <property stdset="1">
+                                <name>text</name>
+                                <string>Fro&amp;m</string>
+                            </property>
+                            <property stdset="1">
+                                <name>checked</name>
+                                <bool>false</bool>
+                            </property>
+                            <property>
+                                <name>toolTip</name>
+                                <string>Print all pages</string>
+                            </property>
+                        </widget>
+                        <widget row="0"  column="0" >
+                            <class>QRadioButton</class>
+                            <property stdset="1">
+                                <name>name</name>
+                                <cstring>allRB</cstring>
+                            </property>
+                            <property stdset="1">
+                                <name>text</name>
+                                <string>&amp;All</string>
+                            </property>
+                            <property stdset="1">
+                                <name>checked</name>
+                                <bool>true</bool>
+                            </property>
+                            <property>
+                                <name>toolTip</name>
+                                <string>Print all pages</string>
+                            </property>
+                        </widget>
+                    </grid>
+                </widget>
+                <widget>
+                    <class>QCheckBox</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>oddCB</cstring>
                     </property>
                     <property stdset="1">
                         <name>text</name>
-                        <string>&amp;All</string>
+                        <string>Print &amp;odd-numbered pages</string>
                     </property>
                     <property stdset="1">
                         <name>checked</name>
                         <bool>true</bool>
                     </property>
-                    <property>
-                        <name>toolTip</name>
-                        <string>Print all pages</string>
-                    </property>
                 </widget>
-                <widget row="1"  column="0" >
-                    <class>QRadioButton</class>
+                <widget>
+                    <class>QCheckBox</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>oddRB</cstring>
+                        <cstring>evenCB</cstring>
                     </property>
                     <property stdset="1">
                         <name>text</name>
-                        <string>&amp;Odd</string>
-                    </property>
-                    <property>
-                        <name>toolTip</name>
-                        <string>Print odd pages only</string>
-                    </property>
-                </widget>
-                <widget row="2"  column="0" >
-                    <class>QRadioButton</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>evenRB</cstring>
+                        <string>Print &amp;even-numbered pages</string>
                     </property>
                     <property stdset="1">
-                        <name>text</name>
-                        <string>&amp;Even</string>
-                    </property>
-                    <property>
-                        <name>toolTip</name>
-                        <string>Print even pages only</string>
-                    </property>
-                </widget>
-                <widget row="3"  column="2" >
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>toPageL</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>enabled</name>
+                        <name>checked</name>
                         <bool>true</bool>
                     </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>&amp;Last page:</string>
-                    </property>
-                    <property>
-                        <name>buddy</name>
-                        <cstring>toED</cstring>
-                    </property>
                 </widget>
-                <widget row="4"  column="2" >
-                    <class>QLineEdit</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>toED</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>enabled</name>
-                        <bool>true</bool>
-                    </property>
-                    <property>
-                        <name>toolTip</name>
-                        <string>Page number to print to</string>
-                    </property>
-                </widget>
-                <widget row="0"  column="2" >
+                <widget>
                     <class>QCheckBox</class>
                     <property stdset="1">
                         <name>name</name>
@@ -253,60 +355,7 @@
                         <string>Print in reverse order</string>
                     </property>
                 </widget>
-                <widget row="4"  column="1" >
-                    <class>QLineEdit</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>fromED</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>enabled</name>
-                        <bool>true</bool>
-                    </property>
-                    <property>
-                        <name>toolTip</name>
-                        <string>Page number to print from</string>
-                    </property>
-                </widget>
-                <widget row="4"  column="0" >
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>rangeLA</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>Ran&amp;ge</string>
-                    </property>
-                    <property>
-                        <name>buddy</name>
-                        <cstring>fromED</cstring>
-                    </property>
-                    <property>
-                        <name>toolTip</name>
-                        <string>Set a range of pages to print</string>
-                    </property>
-                </widget>
-                <widget row="3"  column="1" >
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>fromPageL</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>enabled</name>
-                        <bool>true</bool>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>&amp;Starting range:</string>
-                    </property>
-                    <property>
-                        <name>buddy</name>
-                        <cstring>fromED</cstring>
-                    </property>
-                </widget>
-            </grid>
+            </vbox>
         </widget>
         <widget>
             <class>QGroupBox</class>
@@ -486,18 +535,6 @@
         <slot>change_adaptor()</slot>
     </connection>
     <connection>
-        <sender>oddRB</sender>
-        <signal>toggled(bool)</signal>
-        <receiver>QPrintDialogBase</receiver>
-        <slot>change_adaptor()</slot>
-    </connection>
-    <connection>
-        <sender>evenRB</sender>
-        <signal>toggled(bool)</signal>
-        <receiver>QPrintDialogBase</receiver>
-        <slot>change_adaptor()</slot>
-    </connection>
-    <connection>
         <sender>reverseCB</sender>
         <signal>toggled(bool)</signal>
         <receiver>QPrintDialogBase</receiver>
@@ -545,6 +582,18 @@
         <receiver>QPrintDialogBase</receiver>
         <slot>change_adaptor()</slot>
     </connection>
+    <connection>
+        <sender>rangeRB</sender>
+        <signal>toggled(bool)</signal>
+        <receiver>fromED</receiver>
+        <slot>setEnabled(bool)</slot>
+    </connection>
+    <connection>
+        <sender>rangeRB</sender>
+        <signal>toggled(bool)</signal>
+        <receiver>toED</receiver>
+        <slot>setEnabled(bool)</slot>
+    </connection>
     <slot access="protected">browseClicked()</slot>
     <slot access="public">change_adaptor()</slot>
     <slot access="public">copiesChanged(int)</slot>
@@ -559,8 +608,6 @@
     <tabstop>fileED</tabstop>
     <tabstop>browsePB</tabstop>
     <tabstop>allRB</tabstop>
-    <tabstop>oddRB</tabstop>
-    <tabstop>evenRB</tabstop>
     <tabstop>fromED</tabstop>
     <tabstop>toED</tabstop>
     <tabstop>reverseCB</tabstop>
