@@ -1,5 +1,11 @@
 2002-09-11  John Levon  <levon@movementarian.org>
 
+	* QPrint.h:
+	* QPrint.C: 
+	* ui/QPrintDialog.ui: update for odd/even changes
+ 
+2002-09-11  John Levon  <levon@movementarian.org>
+
 	* QCitationDialog.C: show right info when selecting a cite
 
 	* QParagraphDialog.C: don't validate lengths, to allow glue
